# Epitech

./: README.md
Elementary Projects/Corewar/: Makefile  readme.md
Elementary Projects/Corewar/bonus/: Makefile  bonus_corewar
Elementary Projects/Corewar/include/: asm.h  corewar.h
Elementary Projects/Dante/: Makefile  readme.md
Elementary Projects/Dante/include/: solver.h
Graphical Projects/My Defender/include/: config_game.h  game.h  linked_list.h  linked_ltype.h  menu.h  text.h  texture.h  utils.h
Graphical Projects/My Defender/src/: main.c
Graphical Projects/My Hunter/: Makefile
Graphical Projects/My Hunter/include/: my_functions.h  my_structures.h
Graphical Projects/My Hunter/my_files/: convert_int_to_string.c  duck_speed.c  init_game.c  main.c  my_animation.c  my_collision.c  my_events.c  my_game_process.c  my_putstr.c
Graphical Projects/My RPG/: .gitignore
Graphical Projects/My RPG/include/: my_rpg.h
Graphical Projects/My Runner/include/: object.h
Graphical Projects/My Runner/maps/: map1.txt  map3.txt
Graphical Projects/My Runner/src/: collision.c  create_window.c  main.c  my_utils.c  run_game.c
Math/107transfer/: 107transfer
Math/110borwein/: 110borwein
Tek 1/Elementary Projects/Corewar/: .gitignore  readme.md
Tek 1/Elementary Projects/Dante/: .gitignore
Tek 1/Graphical Projects/My Defender/: Makefile  readme.md
Tek 1/Graphical Projects/My Hunter/: Makefile  readme.md
Tek 2/Assembly/: .gitignore  Makefile
Tek 3/Area/: README.md  docker-compose.yml
Tek 3/R-Type/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
Tek 3/R-Type/Bonus/: CMakeLists.txt  Makefile  main.cpp
Tek 3/R-Type/Bonus/assets/models/: Plane.glb  pipe.glb
Tek 3/R-Type/Bonus/src/: F-Plane.h  Game.cpp  Game.hpp
Tek 3/R-Type/Client/: CMakeLists.txt  CMakeUserPresets.json  Makefile  main.cpp
Tek 3/R-Type/Client/assets/models/EnemyShips/: BigBoss1.glb  BigBoss2.glb  Boss1.glb  Boss2.glb  Ennemy1.glb  Ennemy2.glb  LittleEnnemy1.glb  LittleEnnemy2.glb  LittleEnnemy3.glb  LittleEnnemy4.glb  LittleEnnemy5.glb
Tek 3/R-Type/Client/assets/models/MainShip/: Friend.glb  Main.glb
Tek 3/R-Type/Client/assets/models/Props/: Asteroid1.glb  Asteroid2.glb  Asteroid3.glb  Asteroid4.glb  Asteroid5.glb  Bullet.glb  Planet.glb  Rocket1.glb  Rocket2.glb
Tek 3/R-Type/Client/src/: NType.hpp  Resources.hpp
Tek 3/R-Type/Client/src/Game/: Asteroid.cpp  Enemy.cpp  Friend.cpp  Game.cpp  Game.hpp  InitGame.cpp  InputsGame.cpp  LevelsManager.cpp  Planets.cpp  Weapon.cpp
Tek 3/R-Type/Client/src/Menu/: InitMenu.cpp  InputsMenu.cpp  Menu.cpp  Menu.hpp
Tek 3/R-Type/Client/src/Over/: InitOver.cpp  InputsOver.cpp  Over.cpp  Over.hpp
Tek 3/R-Type/Client/src/Win/: InitWin.cpp  InputsWin.cpp  Win.cpp  Win.hpp
Template/: Makefile
Template/include/: my_lib.h
Template/lib/: Makefile  my_flags_cases.c  my_getnbr.c  my_getoctal.c  my_printf.c  my_put_nbr.c  my_put_nbr_base.c  my_put_nbr_long.c  my_put_nbr_unsigned.c  my_putchar.c  my_putcharc.c  my_putstr.c  my_putstrs.c  my_str_isnum.c  my_strcapitalize.c  my_strcat.c  my_strcat_alloc.c  my_strcmp.c  my_strlen.c  my_strlowcase.c
Template/src/: main.c
Unix System Projects/42sh/: readme.md
(+1292 files in other folders)
